# notes

./: README.md  pyproject.toml
concepts/cs/: algorithms.md  computer_networks.md  design_patterns.md  object_oriented_programming.md  version_control.md
technologies/: anaconda.md  ansible.md  bash.md  grafana.md  matplotlib.md  numpy.md  pandas.md  psycopg.md  pytest.md  python.md
